# neuron_gaming

./: .clang-format  CMakeLists.txt  vcpkg.json
example_module/: CMakeLists.txt  README.md
example_module/src/: module_main.cpp
game/: CMakeLists.txt
game/src/game/: main.cpp
neuron/: CMakeLists.txt
neuron/api/: API.md  CMakeLists.txt
neuron/api/include/neuron/api/: api.hpp  handle.hpp  module.hpp  render.hpp
neuron/src/neuron/: config.hpp  neuron.cpp  neuron.hpp
neuron/src/neuron/render/: render_context.cpp  render_context.hpp
